# rust_echo

./: Cargo.toml  run.sh
src/: log.rs  main.rs  shutdown.rs
src/http/: ascii.rs  cleaner.rs  handler.rs  mod.rs  open_api.rs  routes.rs  upload.rs
src/model/: body_kind.rs  echo_response.rs  mod.rs  params.rs
