[package]
name = "echo-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["multipart", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
image = "0.25.8"
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
futures-util = "0.3.31"
